--- a/pom.xml
+++ b/pom.xml
@@ -154,18 +154,11 @@
 				<version>1.3.8</version>
 				<extensions>true</extensions>
 				<configuration>
-					<sourceDirectories>
-						<sourceDirectory>src/clj</sourceDirectory>
-					</sourceDirectories>
+                    <testSourceDirectories>
+                        <testSourceDirectory>test/clj</testSourceDirectory>
+                    </testSourceDirectories>
 				</configuration>
 				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
 					<execution>
 						<id>test</id>
 						<phase>test</phase>
