added a main class to the pom for creating an uberjar when deploying

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass></mainClass>
+							<mainClass>awesm.storm.EventProcessorTopology</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
